# jelly-fpga-client-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
examples/: accel_management.rs  basic_usage.rs  comprehensive_test.rs  test_blinking_led.rs  type_safe_operations.rs
src/: lib.rs
